[package]
name = "compliance-registry-raw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "contract"
path = "src/main.rs"

[dependencies]
casper-contract = { version = "5", default-features = false }
casper-types = "5"
wee_alloc = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
